[FIXED] keyboard popup on mobile devices made #page-content div too short.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,7 +35,7 @@ form.form-create-todo {
 #page-content {
 	margin-top: 1.5em;
 	background-color: white;
-	height: 95%;
+	min-height: 95%;
 	border-radius:10px;
 }
 
